...
                onClick = onHowToProveYourIdentityClick
            )
            if (DeveloperTools.IS_DEVELOPER_PANEL_ENABLED) {
                TextButton(
                    onClick = { openDevPanel() },
                ) {
                    Text("Developer Panel")
                }
            }
        }
    }
}

...
        HomeScreenBody(
            proveYourIdentityCardEnabled = true,
            proveYourIdentityCard = {
                GdsCard(
                    title = "Prove your identity",
                    body = "This is a placeholder",
                    buttonText = "Continue proving your identity",
                    onClick = {}
                )
            },
        )
    }
}
...
