...

    <!-- ID Check SDK -->
    <string name="idsdk_app_name" translatable="false">@string/one_login_app_name</string>

    <!-- Navigation -->
    <string name="app_continue">Continue</string>
    <string name="app_closeButton">Close</string>
    <string name="app_doneLink">Done</string>
    <string name="app_home">Home</string>
    <string name="app_wallet">Wallet</string>
    <string name="app_settings">Settings</string>
    <string name="app_TabBarWallet">Documents</string>

...
    <!--  OSSL  -->
    <string name="app_osslTitle">Open source licenses</string>

    <!-- Accessibility -->
    <string name="app_openLinkExternally">Opens in web browser</string>
    <string name="app_openGooglePlayStore">Opens in play store</string>
    <string name="one_login_image_content_desc" translatable="false">Gov dot UK one login</string>

    <!-- Cri Orchestrator Temporary -->
    <string name="app_cri_orchestrator_placeholder" translatable="false">Placeholder</string>

    <!-- Welcome tile -->
    <string name="app_welcomeTileHeader">Welcome</string>
...
