<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="proveIdentityCardTestTag" translatable="false">Prove your identity card test tag</string>
</resources>