package uk.gov.onelogin.features.component.home

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.isDisplayed
import androidx.compose.ui.test.junit4.ComposeTestRule
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollTo
import androidx.test.espresso.Espresso
import androidx.test.espresso.intent.Intents
import androidx.test.ext.junit.runners.AndroidJUnit4
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.mockito.kotlin.mock
import org.mockito.kotlin.verify
import uk.gov.android.featureflags.FeatureFlags
import uk.gov.android.featureflags.InMemoryFeatureFlags
import uk.gov.android.network.service.v2.NetworkService
import uk.gov.android.onelogin.core.R
import uk.gov.android.onelogin.features.R as FeaturesR
import uk.gov.android.ui.patterns.utils.matchers.ScrollableWithKeyboardMatchers.hasKeyboardScroll
import uk.gov.logging.api.Logger
import uk.gov.logging.api.analytics.logging.AnalyticsLogger
import uk.gov.onelogin.core.navigation.data.HomeRoutes
import uk.gov.onelogin.core.navigation.domain.Navigator
import uk.gov.onelogin.criorchestrator.sdk.publicapi.CriOrchestratorSdkExt.create
import uk.gov.onelogin.criorchestrator.sdk.sharedapi.CriOrchestratorSdk
import uk.gov.onelogin.features.FragmentActivityTestCase
import uk.gov.onelogin.features.TestUtils
import uk.gov.onelogin.features.extensions.setupComposeTestRule
import uk.gov.onelogin.features.featureflags.data.CriOrchestratorFeatureFlag
import uk.gov.onelogin.features.home.ui.HomeScreen
import uk.gov.onelogin.features.home.ui.HomeScreenAnalyticsViewModel
import uk.gov.onelogin.features.home.ui.HomeScreenPreview
import uk.gov.onelogin.features.home.ui.HomeScreenViewModel
import uk.gov.onelogin.features.wallet.data.WalletRepository

@RunWith(AndroidJUnit4::class)
@Suppress("ForbiddenComment")
class HomeScreenTest : FragmentActivityTestCase() {
    private lateinit var networkService: NetworkService
    private lateinit var analyticsLogger: AnalyticsLogger
    private lateinit var criOrchestratorSdk: CriOrchestratorSdk

    // TODO: Remove this after `activeSession` has been added to the CriOrchestrator and test using the stub
    //  provided
    private lateinit var featureFlags: FeatureFlags
    private lateinit var navigator: Navigator
    private lateinit var logger: Logger
    private lateinit var viewModel: HomeScreenViewModel
    private lateinit var analytics: AnalyticsLogger
    private lateinit var analyticsViewModel: HomeScreenAnalyticsViewModel
    private lateinit var walletRepository: WalletRepository

    @Before
    fun setup() {
        Intents.init()
        networkService = mock()
        analyticsLogger = mock()
        featureFlags =
            InMemoryFeatureFlags(
                setOf(CriOrchestratorFeatureFlag.ENABLED)
            )
        navigator = mock()
        logger = mock()
        criOrchestratorSdk =
            CriOrchestratorSdk.create(
                authenticatedHttpClient = networkService,
                analyticsLogger = analyticsLogger,
                initialConfig = TestUtils.criSdkConfig,
                logger = logger,
                applicationContext = context
            )
        walletRepository = mock()
        viewModel =
            HomeScreenViewModel(
                featureFlags,
                navigator,
                walletRepository,
                criOrchestratorSdk
            )
        analytics = mock()
        analyticsViewModel = HomeScreenAnalyticsViewModel(context, analytics)
    }

    @After
    fun tearDown() {
        Intents.release()
    }

    @Test
    fun homeScreenDisplayed() {
        setupScreen()
        composeTestRule.apply {
            closeContinueToProveYourIdentityModal()

            onNodeWithContentDescription(
                resources.getString(R.string.one_login_image_content_desc)
            ).assertIsDisplayed()

            onNodeWithTag(
                resources.getString(R.string.welcomeCardTestTag),
                useUnmergedTree = true
            ).assertIsDisplayed()

            onNodeWithTag(
                resources.getString(FeaturesR.string.proveIdentityCardTestTag),
                useUnmergedTree = true
            ).performScrollTo().assertIsDisplayed()
        }
    }

    @Test
    fun analyticsTriggered() {
        setupScreen()
        composeTestRule.apply {
            closeContinueToProveYourIdentityModal()

            Espresso.pressBack()
        }
    }

    @Test
    fun homeScreenPreviewDisplayed() {
        setupPreview()
        composeTestRule.apply {
            onNodeWithContentDescription(
                resources.getString(R.string.one_login_image_content_desc)
            ).assertIsDisplayed()

            onNodeWithTag(
                resources.getString(R.string.welcomeCardTestTag),
                useUnmergedTree = true
            ).assertIsDisplayed()

            onNodeWithTag(
                resources.getString(FeaturesR.string.proveIdentityCardTestTag),
                useUnmergedTree = true
            ).performScrollTo().assertIsDisplayed()
        }
    }

    @Test
    fun keyboardScrolls() {
        setupPreview()
        composeTestRule.apply {
            onNode(hasKeyboardScroll())
                .assertIsDisplayed()
        }
    }

    @Test
    fun howToProveYourIdentityCardClickNavigatesToModal() {
        setupScreen()
        composeTestRule.apply {
            closeContinueToProveYourIdentityModal()

            onNodeWithText(
                context.getString(FeaturesR.string.app_howToTileLink),
            ).performScrollTo().performClick()

            verify(navigator).navigate(HomeRoutes.HowToProveYourIdentity)
        }
    }

    private fun setupScreen() {
        composeTestRule.setupComposeTestRule { _ ->
            HomeScreen(viewModel, analyticsViewModel)
        }
    }

    private fun setupPreview() {
        composeTestRule.setupComposeTestRule { _ ->
            HomeScreenPreview()
        }
    }

    private fun ComposeTestRule.closeContinueToProveYourIdentityModal() {
        waitUntil(TIMEOUT) {
            onNodeWithContentDescription(
                "Close",
                substring = true,
                useUnmergedTree = true
            ).isDisplayed()
        }

        onNodeWithContentDescription(
            "Close",
            substring = true,
            useUnmergedTree = true
        ).performClick()
    }

    companion object {
        private const val TIMEOUT = 10000L
    }
}
